--- a/local.conf
+++ b/local.conf
@@ -40,7 +40,7 @@ SERVICE_PASSWORD=$ADMIN_PASSWORD
 # the host. Setting it here also makes it available for ``openrc`` to include
 # when setting ``OS_AUTH_URL``.
 # ``HOST_IP`` is not set by default.
-#HOST_IP=127.0.0.1
+HOST_IP=127.0.0.1
 
 
 # Logging
